SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Added SAS default driver definition.
 Thanks to Luca Vercelli

Aliases can be colored. This feature for example can be used to mark important Aliases.

Cell data popup dialog --> Browse button now remembers last directory.

Reworked corrections/abbreviations dialog. See Session toolbar button 'Configure auto correct /abreviation'.

#438 The 'Run query output to a file'-feature does now respect the 'Abort on error ...'-property.
  See menu File --> New Session Properties --> tab SQL

#566 Simplified launch scripts by using wildcards to build the classpath.
  This was done for the SQuirreL application and CLI launch scripts.

#438 Run query output to a file by defining the file as part of the SQL statement
  Example:
    @file '/tmp/customers.xlsx' SELECT * FROM customers
  will write the result of 'SELECT * FROM customers' to '/tmp/customers.xlsx'
  The settings for the output will be taken from the 'Store result of SQL to file' dialog.
  Please note the single quotes around the file name.

Allowed Java version 10 in starter scripts.

New right mouse menu entry 'Copy selected rows to new window' available in all tables.
  If windows with with matching column names and column types already exist another pop up menu allows to append
  the selected rows to one of these windows.

#412 Provided Command Line Interface (CLI).
  See Readme.txt in the squirrelcli/ subdirectory of your SQuirreL installation.


Bug fixes:

#1341 Squirrel was started twice by squirrel-sql.bat in the plain zip versions of snapshot-20180406_0118.

Added new alternative to fix MAC OS launch script problem with setting SQUIRREL_SQL_HOME.
  Thanks to Frank Kemmer
