@@ -13,7 +13,7 @@ TableCopyWikiCommand.error.flavors=Encountered an exception while attempting to 
 TileInternalFramesAction.title=Tile
 
 TableExportCsvDlg.defaultLabel=Default
-TableExportCSVDlg.exportTitleNew=CSV / MS Excel / XML export
+TableExportCSVDlg.exportTitleNew=CSV / MS Excel / XML / JSON export
 TableExportCsvDlg.exportCsvFile=Export to file:
 TableExportCsvDlg.columnSeparator=Column Separator:
 TableExportCsvDlg.lineSeparatorLabel=Line Separator:
@@ -48,10 +48,13 @@ TableExportCsvController.warnIfExcel=None extended Microsoft Excel spreadsheet (
 TableExportCsvDlg.useGlobalPrefsFormating=Use formatting as configured in Global Prefs
 TableExportCsvDlg.useDefaultFormating=Use default formatting
 
+
+TableExportCsvDlg.export.format.title=Export formats
 TableExportCsvDlg.formatCSV=Export CSV file
 TableExportCsvDlg.formatXLSX=Export MS Excel (XLSX) file
 TableExportCsvDlg.formatXLS=Export MS Excel (XLS) file
 TableExportCsvDlg.formatXML=Export XML file
+TableExportCsvDlg.formatJSON=Export JSON file
 
 TableExportCsvDlg.useGlobalPrefsFormatingExcel=Use formatting as configured in Global Prefs (recommended for MS Excel)
 
